react-router-dom issue fixed. components are loading on lnik click. wrapping up about me page

--- a/react-redux/src/App.css
+++ b/react-redux/src/App.css
@@ -4,6 +4,10 @@
   margin-right: 3px;
 }
 
+nav{
+  width: 100%;
+}
+
 ul{
   list-style: none;
   padding: 0px;
